# velocity-engine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt
.github/workflows/: ci.yml
bench/: CMakeLists.txt
cmake/: CompilerOptions.cmake
src/: CMakeLists.txt  main.cpp
src/common/: types.h
src/core/: events.h  order.h  order.hpp  order_id_generator.h
tests/: CMakeLists.txt
tests/unit/: test_orders.cpp  test_types.cpp
